<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:enabled="true"
            android:icon="@drawable/ic_outline_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/can"
            android:enabled="true"
            android:icon="@drawable/can"
            android:title="@string/can"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/cart"
            android:enabled="true"
            android:icon="@drawable/ic_outline_shopping_cart_24"
            android:title="@string/cart"/>

        <item
            android:id="@+id/your_order"
            android:enabled="true"
            android:icon="@drawable/order"
            android:title="@string/your_order"/>



        <item
            android:id="@+id/favourites"
            android:enabled="true"
            android:icon="@drawable/ic_outline_favorite_border_24"
            android:title="@string/favourites"/>

    </group>



    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">




        <item
            android:id="@+id/account"
            android:enabled="true"
            android:icon="@drawable/ic_outline_account_circle_24"
            android:title="@string/your_account"/>

        <item
            android:id="@+id/language"
            android:enabled="true"
            android:icon="@drawable/ic_outline_language_24"
            android:title="@string/language"/>

        <item
            android:id="@+id/settings"
            android:enabled="true"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings"/>

        <item
            android:id="@+id/customercare"
            android:enabled="true"
            android:icon="@drawable/ic_outline_support_agent_24"
            android:title="@string/customer_care"/>

        <item android:id="@+id/logout"
            android:enabled="true"
            android:icon="@drawable/ic_outline_logout_24"
            android:title="@string/logout"/>

    </group>



</menu>